--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -49,7 +49,7 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+		box-sizing: border-box;
 }
 
 html, body {
@@ -64,3 +64,54 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.container {
+	margin: 26px auto;
+	width: 876px;
+}
+
+header {
+	border-bottom: 1px solid black;
+	height: 565px;
+}
+
+.header-nav a {
+	color: #b9b9b9;
+	font-size: 15px;
+	margin: 30px;
+	text-decoration: none;
+}
+
+.header-nav a:first-child {
+	margin-left: 0;
+}
+
+.header-nav img {
+	display: inline;
+	margin-left: 52px;
+	vertical-align: middle;
+}
+
+.header-box section {
+	display: inline-block;
+	height: 372px;
+	margin-top: 120px;
+	text-align: center;
+	width: 490px;
+	vertical-align: top;
+}
+
+.header-box section h2 {
+	font-size: 5em;
+}
+
+.header-box section a {
+	border: 1px solid black;
+	color: black;
+	padding: 2px 40px;
+	text-decoration: none;
+}
+
+.header-box img {
+	margin-top: 70px;
+}
