--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -71,7 +71,6 @@ h1, h2, h3, h4, h5 {
 }
 
 header {
-	border-bottom: 1px solid black;
 	height: 565px;
 }
 
@@ -87,7 +86,7 @@ header {
 }
 
 .header-nav img {
-	display: inline;
+	display: inline-block;
 	margin-left: 52px;
 	vertical-align: middle;
 }
@@ -114,4 +113,35 @@ header {
 
 .header-box img {
 	margin-top: 70px;
+}
+
+main {
+	border-bottom: 1px solid black;
+	border-top: 1px solid black;
+	margin-bottom: 40px;
+	padding: 40px 0 40px;
+}
+
+main img {
+	margin: 40px 0 40px;
+}
+
+.main-content section {
+	display: inline-block;
+	margin-left: 12px;
+	width: 281px;
+}
+
+.main-content:first-child section {
+	width: 430px;
+}
+
+.main-content section:first-child {
+	margin: 0;
+}
+
+footer p {
+	font-size: 13px;
+	margin: 50px 0 150px;
+	text-align: center;
 }
