--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -155,6 +155,10 @@ main img {
 	margin: 0;
 }
 
+.main-content section p {
+	line-height: 1.25em;
+}
+
 footer p {
 	font-size: 13px;
 	margin: 50px 0 150px;
